--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+  .wraper{
+    @apply max-w-7xl mx-6 sm:mx-8 md:mx-10 lg:mx-12 xl:mx-auto
   }
 }
